--- a/charts/lavanda/charts/frontend/values.yaml
+++ b/charts/lavanda/charts/frontend/values.yaml
@@ -27,7 +27,7 @@ ingress:
   enabled: true
   annotations: 
     nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lavandadelpatio.es/oauth2/start?rd=https://$host$request_uri$is_args$args"
-    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.kubernetes-dashboard.svc.cluster.local:4180/oauth2/auth"
+    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
     # cert-manager.io/cluster-issuer: letsencrypt-production
   hosts:
     - host: lavandadelpatio.es
