--- a/charts/lavanda/charts/frontend/values.yaml
+++ b/charts/lavanda/charts/frontend/values.yaml
@@ -21,34 +21,24 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 4000
+  port: 80
 
 ingress:
   enabled: true
   annotations: 
     nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lavandadelpatio.es/oauth2/start?rd=https://$host$request_uri$is_args$args"
-    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.kubernetes-dashboard.svc.cluster.local:4180/oauth2/auth"
-    # cert-manager.io/cluster-issuer: letsencrypt-production
+    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
   hosts:
     - host: lavandadelpatio.es
       paths: [ / ]  
-  # tls:
-    # - hosts:
-        # - dashboard.lavandadelpatio.es
-      # secretName: new-aouth2-proxy
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
+resources: 
   # requests:
-  #   cpu: 100m
+  #   cpu: 250m
   #   memory: 128Mi
-
+  # limits:
+  #   cpu: 500m
+  #   memory: 256Mi
 autoscaling:
   enabled: false
   minReplicas: 1
