--- a/charts/lavanda/charts/filebot/templates/deployment.yaml
+++ b/charts/lavanda/charts/filebot/templates/deployment.yaml
@@ -35,13 +35,22 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: SPRING_PROFILES_ACTIVE
-              value: pro
+              value: pro 
             - name: OKTA_OAUTH2_ISSUER
-              value: {{ required "A valid .Values.global.okta.issuer entry required!" .Values.global.okta.issuer }}
+              valueFrom:
+                secretKeyRef:
+                 name: okta-credentials
+                 key: client-issuer
             - name: OKTA_OAUTH2_CLIENT_ID
-              value: {{ required "A valid .Values.global.okta.clientId entry required!" .Values.global.okta.clientId }}
+              valueFrom:
+                secretKeyRef:
+                 name: okta-credentials
+                 key: client-id
             - name: OKTA_OAUTH2_CLIENT_SECRET
-              value: {{ required "A valid .Values.global.okta.clientSecret entry required!" .Values.global.okta.clientSecret }} 
+              valueFrom:
+                secretKeyRef:
+                 name: okta-credentials
+                 key: client-secret
             - name: SPRING_DATA_MONGODB_URI
               valueFrom:
                 secretKeyRef:
