--- a/charts/lavanda/charts/automated-download-films/values.yaml
+++ b/charts/lavanda/charts/automated-download-films/values.yaml
@@ -10,12 +10,8 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
   name: ""
 
 podAnnotations: {}
@@ -43,7 +39,7 @@ ingress:
     nginx.ingress.kubernetes.io/auth-snippet: |
       proxy_method $request_method;
   hosts:
-    - host: api.lavandadelpatio.es
+    - host: {{ .Values.global.api.url.backend }} 
       paths: [ /feed-films ]
   tls: []
 
