--- a/charts/lavanda/charts/automated-download-shows/values.yaml
+++ b/charts/lavanda/charts/automated-download-shows/values.yaml
@@ -42,14 +42,12 @@ service:
 ingress:
   enabled: true
   annotations:   
-    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lavandadelpatio.es/oauth2/start?rd=https://$host$request_uri$is_args$args"
     nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
     nginx.ingress.kubernetes.io/auth-response-headers: Authorization
-    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
     nginx.ingress.kubernetes.io/auth-snippet: |
       proxy_method $request_method;
   hosts:
-    - host: api.lavandadelpatio.es
+    - host: {{ .Values.global.api.url.backend }} 
       paths: [ /feed-shows ]
   tls: []
   #  - secretName: chart-example-tls
