--- a/charts/lavanda/charts/frontend/values.yaml
+++ b/charts/lavanda/charts/frontend/values.yaml
@@ -29,7 +29,7 @@ ingress:
     nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lavandadelpatio.es/oauth2/start?rd=https://$host$request_uri$is_args$args"
     nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
   hosts:
-    - host: lavandadelpatio.es
+    - host: {{ .Values.global.api.url.frontend }} 
       paths: [ / ]  
 
 resources: 
