--- a/charts/frontend/values.yaml
+++ b/charts/frontend/values.yaml
@@ -1,8 +1,7 @@
 replicaCount: 1
-
 image:
-  repository: lavandadelpatio/automated-download-films
-  pullPolicy: IfNotPresent
+  repository: lavandadelpatio/frontend
+  pullPolicy: Always
   tag: "master"
 
 imagePullSecrets: []
@@ -17,40 +16,29 @@ serviceAccount:
 podAnnotations: {}
 
 podSecurityContext: {}
-  # fsGroup: 2000
 
 securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
 
 service:
   type: ClusterIP
-  port: 8080
+  port: 80
 
 ingress:
   enabled: true
   annotations: 
+    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lavandadelpatio.es/oauth2/start?rd=https://$host$request_uri$is_args$args"
     nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
-    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
-    nginx.ingress.kubernetes.io/auth-snippet: |
-      proxy_method $request_method;
   hosts:
-    - host: {{ .Values.global.api.url.backend }} 
-      paths: [ /feed-films ]
-  tls: []
+    - host: example.com 
+      paths: [ / ]  
 
-resources: {}
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
+resources: 
   # requests:
-  #   cpu: 100m
+  #   cpu: 250m
   #   memory: 128Mi
-
+  # limits:
+  #   cpu: 500m
+  #   memory: 256Mi
 autoscaling:
   enabled: false
   minReplicas: 1
@@ -59,7 +47,7 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 nodeSelector: 
-  cputype: arm64
+  cputype: amd64
 
 tolerations: []
 
