--- a/charts/tmdb/values.yaml
+++ b/charts/tmdb/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: lavandadelpatio/tmdb
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "sha-e882db4"
+  tag: "0.0.6"
 
 imagePullSecrets: []
 nameOverride: ""
