--- a/charts/automated-download-shows/values.yaml
+++ b/charts/automated-download-shows/values.yaml
@@ -1,14 +1,13 @@
-# Default values for lavanda-filebot.
+# Default values for automated-download-shows.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: lavandadelpatio/filebot
+  repository: lavandadelpatio/automated-download-shows
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.0.6"
+  tag: "0.0.2"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -42,19 +41,18 @@ service:
 
 ingress:
   enabled: true
-  annotations: 
+  annotations:   
     nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
     nginx.ingress.kubernetes.io/auth-response-headers: Authorization
     nginx.ingress.kubernetes.io/auth-snippet: |
       proxy_method $request_method;
   hosts:
-    - host: {{ .Values.global.api.url.backend }} 
-      paths: [ /filebot ]
+    - host: example.com 
+      paths: [ /feed-shows ]
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
-
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -75,8 +73,7 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-nodeSelector: 
-  cputype: arm64
+nodeSelector: {}
 
 tolerations: []
 
