--- a/charts/automated-download-films/values.yaml
+++ b/charts/automated-download-films/values.yaml
@@ -33,11 +33,7 @@ service:
 
 ingress:
   enabled: true
-  annotations: 
-    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
-    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
-    nginx.ingress.kubernetes.io/auth-snippet: |
-      proxy_method $request_method;
+  annotations: {}
   hosts:
     - host: example.com 
       paths: [ /feed-films ]
