--- a/charts/frontend/values.yaml
+++ b/charts/frontend/values.yaml
@@ -25,9 +25,7 @@ service:
 
 ingress:
   enabled: true
-  annotations: 
-    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lavandadelpatio.es/oauth2/start?rd=https://$host$request_uri$is_args$args"
-    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
+  annotations: {}  
   hosts:
     - host: example.com 
       paths: [ / ]  
