--- a/charts/automated-download-films/values.yaml
+++ b/charts/automated-download-films/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: lavandadelpatio/automated-download-films
   pullPolicy: IfNotPresent
-  tag: "master"
+  tag: "0.0.57"
 
 imagePullSecrets: []
 nameOverride: ""
