--- a/charts/automated-download-shows/values.yaml
+++ b/charts/automated-download-shows/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: lavandadelpatio/automated-download-shows
   pullPolicy: IfNotPresent
-  tag: "0.0.5"
+  tag: "0.0.6-SNAPSHOT"
 
 imagePullSecrets: []
 nameOverride: ""
