--- a/charts/tmdb/values.yaml
+++ b/charts/tmdb/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: lavandadelpatio/tmdb
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "0.0.6"
 
