--- a/charts/ratedpower/Chart.yaml
+++ b/charts/ratedpower/Chart.yaml
@@ -4,4 +4,4 @@ version: 0.1.0
 dependencies:
   - name: mariadb
     repository: https://charts.bitnami.com/bitnami
-    version: 9.x.x
+    version: 9.5.1
