--- a/.github/workflows/rated-power-chart-release.yaml
+++ b/.github/workflows/rated-power-chart-release.yaml
@@ -22,6 +22,9 @@ jobs:
         uses: azure/setup-helm@v1
         with:
           version: v3.5.4
+      - name: Add Helm repos
+        run: |
+          helm repo add bitnami https://charts.bitnami.com/bitnami
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
         env:
