--- a/charts/ratedpower/templates/deployment.yaml
+++ b/charts/ratedpower/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8443
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -47,6 +47,18 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:   
+            - name: SPRING_PROFILES_ACTIVE
+              value: prod
+            - name: SPRING_DATASOURCE_URL
+              value: {{ .Values.mariadb.url }}
+            - name: SPRING_DATASOURCE_USERNAME
+              value: {{ .Values.mariadb.auth.user }}
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: ratedpower-dev-mariadb
+                  key: mariadb-password    
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
