--- a/charts/ratedpower/values.yaml
+++ b/charts/ratedpower/values.yaml
@@ -57,9 +57,16 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
-
+  
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+mariadb:
+  auth:
+    rootPassword: ""
+    database: ratedpower
+    username: ratedpower
+    password: ""
+  url: ""  
