--- a/charts/ratedpower/templates/deployment.yaml
+++ b/charts/ratedpower/templates/deployment.yaml
@@ -39,11 +39,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /tasks
+              path: /actuator/health/liveness
               port: http
           readinessProbe:
             httpGet:
-              path: /tasks
+              path: /actuator/health/readiness
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
