--- a/charts/ratedpower/values.yaml
+++ b/charts/ratedpower/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: luiscajl/ratedpower
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   tag: "latest"
 serviceAccount:
   create: true
