--- a/charts/ratedpower/templates/deployment.yaml
+++ b/charts/ratedpower/templates/deployment.yaml
@@ -51,7 +51,7 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
             - name: DATASOURCE_URL
-              value: {{ .Values.mariadb.url }}
+              value: {{ .Values.database.url }}
             - name: DATASOURCE_USERNAME
               value: adminlavanda
             - name: SPRING_DATASOURCE_PASSWORD
