--- a/charts/automated-download-films/templates/deployment.yaml
+++ b/charts/automated-download-films/templates/deployment.yaml
@@ -45,7 +45,7 @@ spec:
               protocol: TCP
           env:
             - name: SPRING_PROFILES_ACTIVE
-              value: pro
+              value: {{ .Values.spring.profile}}
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
