--- a/charts/automated-download-shows/values.yaml
+++ b/charts/automated-download-shows/values.yaml
@@ -1,7 +1,5 @@
-# Default values for automated-download-shows.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
+spring:
+  profile: "" 
 replicaCount: 1
 
 image:
