--- a/.github/workflows/release-charts.yaml
+++ b/.github/workflows/release-charts.yaml
@@ -1,9 +1,6 @@
-name: Elastictranscoder Chart
+name: Release helm Chart 
 on:
   push:
-    paths:
-      - "charts/elastictranscoder/Chart.yaml"
-      - ".github/workflows/elastictranscoder-chart-release.yaml"
     branches:
       - main
 jobs:
@@ -13,12 +10,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
       - name: Install Helm
         uses: azure/setup-helm@v1
         with:
