--- a/charts/tmdb/values.yaml
+++ b/charts/tmdb/values.yaml
@@ -1,28 +1,16 @@
-# Default values for tmdb.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
-
 image:
   repository: lavandadelpatio/tmdb
   pullPolicy: Always
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.0.6"
+  tag: "latest"
 
-imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
   name: ""
-
 podAnnotations: {}
 
 podSecurityContext: {}
