--- a/charts/test/values.yaml
+++ b/charts/test/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: luiscajl/test
+  repository: luiscajl/test1
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
