--- a/charts/automated-download-films/values.yaml
+++ b/charts/automated-download-films/values.yaml
@@ -56,8 +56,7 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-nodeSelector: 
-  cputype: arm64
+nodeSelector: {}
 
 tolerations: []
 
