--- a/charts/transmission/values.yaml
+++ b/charts/transmission/values.yaml
@@ -61,8 +61,7 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-nodeSelector:
-  cputype: amd64
+nodeSelector: {}
 
 tolerations: []
 
