--- a/charts/frontend/values.yaml
+++ b/charts/frontend/values.yaml
@@ -44,8 +44,7 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-nodeSelector: 
-  cputype: amd64
+nodeSelector: {}
 
 tolerations: []
 
