--- a/charts/plex/templates/deployment.yaml
+++ b/charts/plex/templates/deployment.yaml
@@ -42,18 +42,8 @@ spec:
               name: plex-config-volume
             # - mountPath: /tmp/transcode
             #   name: plex-transcode-volume
-            - mountPath: /media/4TB_1
-              name: plex-media-1volume  
-            - mountPath: /media/4TB_2
-              name: plex-media-2volume  
-            - mountPath: /media/4TB_3
-              name: plex-media-3volume 
-            - mountPath: /media/4TB_4
-              name: plex-media-4volume
-            - mountPath: /media/Externo8TB_1
-              name: plex-media-5volume  
-            - mountPath: /media/Externo8TB_2
-              name: plex-media-6volume               
+            - mountPath: /media
+              name: plex-media-volume                 
           env:
             - name: PUID
               value: "1000"
@@ -85,30 +75,9 @@ spec:
         - name: plex-config-volume
           persistentVolumeClaim:
             claimName: plex-config  
-        - name: plex-media-1volume
-          nfs:
-           server: 10.10.120.50
-           path: /media/4TB_1
-        - name: plex-media-2volume
-          nfs:
-           server: 10.10.120.50
-           path: /media/4TB_2
-        - name: plex-media-3volume
-          nfs:
-           server: 10.10.120.50
-           path: /media/4TB_3
-        - name: plex-media-4volume
-          nfs:
-           server: 10.10.120.50
-           path: /media/4TB_4
-        - name: plex-media-5volume
-          nfs:
-           server: 10.10.120.50
-           path: /media/Externo8TB_1
-        - name: plex-media-6volume
-          nfs:
-           server: 10.10.120.50
-           path: /media/Externo8TB_2
+        - name: plex-media-volume
+          hostPath:
+            path: /mnt/gdrive
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
