--- a/charts/transmission/templates/deployment.yaml
+++ b/charts/transmission/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
               port: 9091
               httpHeaders:
                 - name: Authorization
-                  value: Basic {{ (printf "%s:%s" .Values.global.transmission.user .Values.global.transmission.password | b64enc) }}
+                  value: Basic {{ (printf "%s:%s" .Values.transmission.user .Values.transmission.password | b64enc) }}
               scheme: HTTP
             initialDelaySeconds: 12
             periodSeconds: 60
@@ -61,7 +61,7 @@ spec:
               port: 9091
               httpHeaders:
                 - name: Authorization
-                  value: Basic {{ (printf "%s:%s" .Values.global.transmission.user .Values.global.transmission.password | b64enc) }}
+                  value: Basic {{ (printf "%s:%s" .Values.transmission.user .Values.transmission.password | b64enc) }}
               scheme: HTTP
             initialDelaySeconds: 10
             timeoutSeconds: 10
