--- a/charts/plex/templates/deployment.yaml
+++ b/charts/plex/templates/deployment.yaml
@@ -77,7 +77,7 @@ spec:
             claimName: plex-config  
         - name: plex-media-volume
           hostPath:
-            path: /mnt/gdrive
+            path: /mnt/plexgdrive
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
