--- a/charts/plex/templates/deployment.yaml
+++ b/charts/plex/templates/deployment.yaml
@@ -77,7 +77,7 @@ spec:
             claimName: plex-config  
         - name: plex-media-volume
           hostPath:
-            path: /mnt/plexgdrive
+            path: {{  required "A valid .Values.mediapath entry required!"  .Values.mediapath }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
