new transmission Chart

--- a/charts/transmission/values.yaml
+++ b/charts/transmission/values.yaml
@@ -3,8 +3,8 @@ replicaCount: 1
 
 image:
   repository: linuxserver/transmission
-  pullPolicy: Always
-  tag: "latest"
+  pullPolicy: IfNotPresent
+  tag: "version-3.00-r2"
 
 imagePullSecrets: []
 nameOverride: ""
