--- a/charts/transmission/values.yaml
+++ b/charts/transmission/values.yaml
@@ -46,13 +46,13 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources:
-    limits:
-      cpu: 2000m
-      memory: 512Mi
-    requests:
-      cpu: 1000m
-      memory: 256Mi
+resources: {}
+    # limits:
+    #   cpu: 750m
+    #   memory: 512Mi
+    # requests:
+    #   cpu: 250m
+    #   memory: 256Mi
 
 autoscaling:
   enabled: false
