--- a/charts/tautulli/templates/deployment.yaml
+++ b/charts/tautulli/templates/deployment.yaml
@@ -34,12 +34,10 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            - name: PUID
-              value: "1000"
-            - name: PGID
-              value: "1000"
-            - name: TZ
-              value: "Europe/Madrid"
+            {{- range .Values.environmentVariables }}
+            - name: {{ .name }}
+              value: {{ .value }}
+            {{- end }} 
           ports:
             - name: http
               containerPort: 8181
@@ -47,14 +45,14 @@ spec:
           volumeMounts:
             - mountPath: /config
               name: tautulli-config-volume    
-          #livenessProbe:
-          #  httpGet:
-          #    path: /status
-          #    port: 8181
-          #readinessProbe:
-          #  httpGet:
-          #    path: /status
-          #    port: 8181
+          livenessProbe:
+           httpGet:
+             path: /status
+             port: 8181
+          readinessProbe:
+           httpGet:
+             path: /status
+             port: 8181
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
