--- a/charts/sonarr/templates/deployment.yaml
+++ b/charts/sonarr/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "plex.fullname" . }}
+  name: {{ include "sonarr.fullname" . }}
   labels:
-    {{- include "plex.labels" . | nindent 4 }}
+    {{- include "sonarr.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "plex.selectorLabels" . | nindent 6 }}
+      {{- include "sonarr.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,13 +18,13 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "plex.selectorLabels" . | nindent 8 }}
+        {{- include "sonarr.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "plex.serviceAccountName" . }}
+      serviceAccountName: {{ include "sonarr.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -33,49 +33,37 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: 32400
-              protocol: TCP
           volumeMounts:
             - mountPath: /config
-              name: plex-config-volume
-            # - mountPath: /tmp/transcode
-            #   name: plex-transcode-volume
+              name: {{ include "sonarr.fullname" . }}-config-volume  
             - mountPath: /media
-              name: plex-media-volume                 
+              name: sonarr-media  
           env:
             {{- range .Values.environmentVariables }}
             - name: {{ .name }}
               value: "{{ .value }}"
-            {{- end }}     
+            {{- end }} 
+          ports:
+            - name: http
+              containerPort: {{ .Values.service.port }}
+              protocol: TCP
           livenessProbe:
             httpGet:
-              path: /identity
-              port: 32400
-            initialDelaySeconds: 15  
-            periodSeconds: 5
-            timeoutSeconds: 5
-            failureThreshold: 6
-            successThreshold: 1  
+              path: /
+              port: http
           readinessProbe:
             httpGet:
-              path: /identity
-              port: 32400
-            initialDelaySeconds: 15  
-            periodSeconds: 5
-            timeoutSeconds: 5
-            failureThreshold: 3
-            successThreshold: 1   
+              path: /
+              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
-        - name: plex-config-volume
+        - name: {{ include "sonarr.fullname" . }}-config-volume
           persistentVolumeClaim:
-            claimName: plex-config  
-        - name: plex-media-volume
+            claimName: {{ include "sonarr.fullname" . }}-config-volume   
+        - name: sonarr-media
           hostPath:
-            path: {{  required "A valid .Values.mediapath entry required!"  .Values.mediapath }}
+            path: {{  required "A valid .Values.media.path entry required!"  .Values.media.path }}   
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
