--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -2,7 +2,7 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/linuxserver/plex
+  repository: linuxserver/jackett
   pullPolicy: Always
   tag: "latest"
 
@@ -11,16 +11,22 @@ environmentVariables:
     value: "1000"
   - name: PGID
     value: "1000"
-  - name: VERSION
-    value: "docker"
+  - name: TZ
+    value: "Europe/Madrid" 
+media:
+  path: "/mnt/gdrive/"    
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
+  # Specifies whether a service account should be created
   create: true
+  # Annotations to add to the service account
   annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
   name: ""
 
 podAnnotations: {}
@@ -37,40 +43,41 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer
-  port: 32400
+  type: ClusterIP
+  port: 8989
 
 ingress:
   enabled: false
+  className: ""
   annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
       paths:
-      - path: /
-        backend:
-          serviceName: chart-example.local
-          servicePort: 80
+        - path: /
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
-resources: 
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
-  #   cpu: 6000m
-  #   memory: 4096Mi
+  #   cpu: 100m
+  #   memory: 128Mi
   # requests:
-  #   cpu: 2000m
-  #   memory: 2048Mi
+  #   cpu: 100m
+  #   memory: 128Mi
 
 autoscaling:
   enabled: false
   minReplicas: 1
-  maxReplicas: 10
+  maxReplicas: 100
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
