--- a/charts/jackett/templates/deployment.yaml
+++ b/charts/jackett/templates/deployment.yaml
@@ -49,10 +49,19 @@ spec:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 30
+            periodSeconds: 60
+            successThreshold: 1
+            failureThreshold: 5  
           readinessProbe:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 10
+            timeoutSeconds: 5
+            periodSeconds: 5
+            successThreshold: 1
+            failureThreshold: 5  
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
