--- a/charts/transmission/templates/deployment.yaml
+++ b/charts/transmission/templates/deployment.yaml
@@ -42,32 +42,32 @@ spec:
               name: transmission-downloads-volume
             - mountPath: /config
               name: transmission-config-volume
-          livenessProbe:
-            httpGet:
-              path: /transmission/web/
-              port: 9091
-              httpHeaders:
-                - name: Authorization
-                  value: Basic {{ (printf "%s:%s" .Values.transmission.user .Values.transmission.password | b64enc) }}
-              scheme: HTTP
-            initialDelaySeconds: 12
-            periodSeconds: 60
-            successThreshold: 1
-            failureThreshold: 5
-            timeoutSeconds: 10
-          readinessProbe:
-            httpGet:
-              path: /transmission/web/
-              port: 9091
-              httpHeaders:
-                - name: Authorization
-                  value: Basic {{ (printf "%s:%s" .Values.transmission.user .Values.transmission.password | b64enc) }}
-              scheme: HTTP
-            initialDelaySeconds: 10
-            timeoutSeconds: 10
-            periodSeconds: 5
-            successThreshold: 1
-            failureThreshold: 5
+          # livenessProbe:
+          #   httpGet:
+          #     path: /transmission/web/
+          #     port: 9091
+          #     httpHeaders:
+          #       - name: Authorization
+          #         value: Basic {{ (printf "%s:%s" .Values.transmission.user .Values.transmission.password | b64enc) }}
+          #     scheme: HTTP
+          #   initialDelaySeconds: 12
+          #   periodSeconds: 60
+          #   successThreshold: 1
+          #   failureThreshold: 5
+          #   timeoutSeconds: 10
+          # readinessProbe:
+          #   httpGet:
+          #     path: /transmission/web/
+          #     port: 9091
+          #     httpHeaders:
+          #       - name: Authorization
+          #         value: Basic {{ (printf "%s:%s" .Values.transmission.user .Values.transmission.password | b64enc) }}
+          #     scheme: HTTP
+          #   initialDelaySeconds: 10
+          #   timeoutSeconds: 10
+          #   periodSeconds: 5
+          #   successThreshold: 1
+          #   failureThreshold: 5
           env:
             - name: PUID
               value: "0"
