--- a/charts/filebot-bot/templates/deployment.yaml
+++ b/charts/filebot-bot/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "automated-download-films.fullname" . }}
+  name: {{ include "filebot-bot.fullname" . }}
   labels:
-    {{- include "automated-download-films.labels" . | nindent 4 }}
+    {{- include "filebot-bot.labels" . | nindent 4 }}
 spec:
 {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
 {{- end }}
   selector:
     matchLabels:
-      {{- include "automated-download-films.selectorLabels" . | nindent 6 }}
+      {{- include "filebot-bot.selectorLabels" . | nindent 6 }}
   revisionHistoryLimit: 1
   strategy:
     type: RollingUpdate
@@ -24,13 +24,13 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       labels:
-        {{- include "automated-download-films.selectorLabels" . | nindent 8 }}
+        {{- include "filebot-bot.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "automated-download-films.serviceAccountName" . }}
+      serviceAccountName: {{ include "filebot-bot.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
