--- a/charts/filebot-bot/templates/hpa.yaml
+++ b/charts/filebot-bot/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "automated-download-films.fullname" . }}
+  name: {{ include "filebot-bot.fullname" . }}
   labels:
-    {{- include "automated-download-films.labels" . | nindent 4 }}
+    {{- include "filebot-bot.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "automated-download-films.fullname" . }}
+    name: {{ include "filebot-bot.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
