--- a/charts/filebot-bot/templates/service.yaml
+++ b/charts/filebot-bot/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "automated-download-films.fullname" . }}
+  name: {{ include "filebot-bot.fullname" . }}
   labels:
-    {{- include "automated-download-films.labels" . | nindent 4 }}
+    {{- include "filebot-bot.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "automated-download-films.selectorLabels" . | nindent 4 }}
+    {{- include "filebot-bot.selectorLabels" . | nindent 4 }}
 
