--- a/charts/filebot-bot/templates/serviceaccount.yaml
+++ b/charts/filebot-bot/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "automated-download-films.serviceAccountName" . }}
+  name: {{ include "filebot-bot.serviceAccountName" . }}
   labels:
-    {{- include "automated-download-films.labels" . | nindent 4 }}
+    {{- include "filebot-bot.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
