Edited and fixed qbitorrentvpn

--- a/charts/qbittorrentvpn/templates/deployment.yaml
+++ b/charts/qbittorrentvpn/templates/deployment.yaml
@@ -60,7 +60,7 @@ spec:
               containerPort: 8181
               protocol: TCP
             - name: bittorrent-ui
-              containerPort: 8080
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
             - name: vpn
               containerPort: 6881
@@ -68,14 +68,24 @@ spec:
             - name: vpn-udp
               containerPort: 6881
               protocol: TCP       
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: 8181
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: 8181
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 30
+            timeoutSeconds: 5
+            periodSeconds: 5
+            successThreshold: 1
+            failureThreshold: 5  
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 40
+            timeoutSeconds: 5
+            periodSeconds: 5
+            successThreshold: 1
+            failureThreshold: 5  
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
